--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,7 @@
 }
 
 body{
-  font-family: 'Catamaran', sans-serif;
+  font-family: 'Open Sans', sans-serif;
   font-weight: 300;
   background: var(--body-bg);
   color: var(--primary-font-color);
