--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Catamaran:400,500,600,700&subset=latin-ext');
 :root {
-    --bg-color: #fafafa;
+    --bg-color: #fff;
     --bg-hover-color: #ececec;
     --body-bg: #fff;
     --primary-font-color: #000;
