--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,7 @@
     --body-bg: #fff;
     --primary-font-color: #000;
     --border-color: #dadada;
+    --post-list-bkg-color: #195a80;
 }
 
 [data-theme="dark"] {
@@ -61,7 +62,7 @@ body{
   align-items: center;
   padding: 5px 10px;
   margin-bottom: 5px;
-  background:var(--bg-color);
+  background:var(--post-list-bkg-color);
   border: 1px dashed var(--border-color);
 }
 
@@ -81,7 +82,7 @@ body{
   align-items: center;
   padding: 5px 10px;
   margin-bottom: 5px;
-  background: #F5F5F5;
+  background: var(--bg-color);
   border:1px dashed var(--border-color);
 }
 
