--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,15 @@
 <div class="container">
 	<div class="profile">
 		<a href="{{ site.url }}"><img src="{{site.author.picture}}" class="profile-image"></a>
+		
+		<style>
+			.vl {
+			  border-left: 6px solid grey;
+			}
+			</style>
+
+			<div class="vl"></div>
+		
 		<div class="profile-about">
 			<h2 style="margin-bottom: 0; font-weight: 700;">{{site.author.name}}</h2>
 			{% if site.author.facebook %}
