--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,9 +1,17 @@
 {% include header.html %}
+	<style>
+        .vertical {
+            border-left: 5px solid black;
+            height: 200px;
+        }
+	</style>
+
 <hr>
 <div class="container">
 	<div class="profile">
 		<a href="{{ site.url }}"><img src="{{site.author.picture}}" class="profile-image"></a>
 		
+		<div class= "vertical"></div>
 		
 		<div class="profile-about">
 			<h2 style="margin-bottom: 0; font-weight: 700;">{{site.author.name}}</h2>
