--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@
     --body-bg: #fff;
     --primary-font-color: #000;
     --border-color: #dadada;
-    --post-list-bkg-color: #edf8fa;
+    --post-list-bkg-color: #f2f4f5;
 }
 
 [data-theme="dark"] {
