--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,7 +82,7 @@ body{
   align-items: center;
   padding: 5px 10px;
   margin-bottom: 5px;
-  background: var(--bg-color);
+  background: var(--post-list-bkg-color);
   border:1px dashed var(--border-color);
 }
 
