--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,12 +113,12 @@ body{
   justify-content: space-between; 
   align-items: center;
   margin-bottom: 5px;
-  background:var(--bg-color);
+  background:var(--post-list-bkg-color);
   border:1px dashed var(--border-color);
 
 }
-.navigation .prev{width: 45%; overflow: hidden; white-space: nowrap; text-overflow: ellipsis; color: var(--primary-font-color); font-weight: 600; padding: 5px 10px;}
-.navigation .next{width: 45%; color: var(--primary-font-color); overflow: hidden; white-space: nowrap; text-overflow: ellipsis; font-weight: 600; text-align: right; padding: 5px 10px;}
+.navigation .prev{width: 45%; overflow: hidden; white-space: nowrap; text-overflow: ellipsis; color: var(--primary-font-color); font-weight: 400; padding: 5px 10px;}
+.navigation .next{width: 45%; color: var(--primary-font-color); overflow: hidden; white-space: nowrap; text-overflow: ellipsis; font-weight: 400; text-align: right; padding: 5px 10px;}
 
 .pagination{
   width: 100%; 
