--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,7 +49,7 @@ body{
   width: 100%;
   padding: 5px 10px;
   background: var(--bg-color);
-  border:1px dashed var(--border-color);
+  border:1px none var(--border-color);
   font-size: 12px;
 }
 
@@ -63,7 +63,7 @@ body{
   padding: 5px 10px;
   margin-bottom: 5px;
   background:var(--post-list-bkg-color);
-  border: 1px dashed var(--border-color);
+  border: 1px solid var(--border-color);
 }
 
 .post-list:hover{
