--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,7 +41,7 @@
 <hr>
 	{{ content }}
 	<div class="footer">
-		<span>Made with <font color="red">♥</font> on Earth, a minimalist Jekyll Theme by <a href="https://hakan.io"><b>Hakan</b></a></span>
+		<span>Minimalist Jekyll Theme by <a href="https://hakan.io"><b>Hakan</b></a></span>
 	</div>
 </div>
 {% include footer.html %}
