--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,7 +83,7 @@ body{
   padding: 5px 10px;
   margin-bottom: 5px;
   background: var(--post-list-bkg-color);
-  border:1px dashed var(--border-color);
+  border:1px solid #000000;
 }
 
 .post-header .post-share{font-weight: 300; color: var(--primary-font-color); display: flex; justify-content: flex-end; align-items: center;}
