--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,9 +20,9 @@ layout: default
 	
 	{{ content }}
 </div>
-<div class="tags-container">
+keywords:<div class="tags-container">
 	{% for tag in page.tags %}
-		keywords: <a href="{{ site.url }}/tags/#{{tag | cgi_escape}}" class="post-tag">{{tag}}</a>{% unless forloop.last %}, {% endunless %}
+		 <a href="{{ site.url }}/tags/#{{tag | cgi_escape}}" class="post-tag">{{tag}}</a>{% unless forloop.last %}, {% endunless %}
 	{% endfor %}
 </div>
 <div class="navigation">
