--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -27,7 +27,7 @@ keywords:<div class="tags-container">
 </div>
 <div class="navigation">
 	{% if page.previous %}
-		<a class="prev" href="{{ page.previous | relative_url }}">< {{ page.previous.title }}</a>
+		<a class="prev" href="{{ site.url }}">< "Back" </a>
 	{% endif %} {% if page.next %}
 	<a class="next" href="{{ page.next | relative_url }}">{{ page.next.title }} ></a>
 {% endif %}
