--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -103,7 +103,7 @@ body{
 .post-tag{margin-bottom: 5px;}
 
 .tags{display: flex; flex-wrap: wrap; justify-content: start;}
-.tag{background: var(--bg-color); padding: 5px 10px; margin-right: 10px; margin-bottom: 10px; display: flex; align-items: center;}
+.tag{background: var(--bg-color); padding: 5px 10px; margin-right: 0px; margin-left: 4px; margin-bottom: 10px; display: flex; align-items: center;}
 
 .navigation{
   width: 100%; 
