--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,6 +113,7 @@ body{
   justify-content: space-between; 
   align-items: center;
   margin-bottom: 5px;
+  padding: 5px 10px;
   background:var(--post-list-bkg-color);
   border:1px solid var(--border-color);
 
