--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,8 +20,8 @@ layout: default
 	
 	{{ content }}
 </div>
-keywords:<div class="tags-container">
-	{% for tag in page.tags %}
+<div class="tags-container">
+	keywords:{% for tag in page.tags %}
 		 <a href="{{ site.url }}/tags/#{{tag | cgi_escape}}" class="post-tag">{{tag}}</a>{% unless forloop.last %}, {%endunless %}
 	{% endfor %}
 </div>
@@ -29,6 +29,6 @@ keywords:<div class="tags-container">
 	{% if page.previous %}
 		<a class="prev" href="{{ site.url }}"><Back </a>
 	{% endif %} {% if page.next %}
-	<a class="next" href="{{ page.next | relative_url }}">{{ page.next.title }} ></a>
+	<!-- <a class="next" href="{{ page.next | relative_url }}">{{ page.next.title }} ></a>-->			
 {% endif %}
 </div>
