--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -26,9 +26,10 @@ layout: default
 	{% endfor %}
 </div>
 <div class="navigation">
-	{% if page.previous %}
+	<a class="prev" href="{{ site.url }}"> <Home </a>
+	<!-- {% if page.previous %}
 		<a class="prev" href="{{ site.url }}"> <Home </a>
-	{% endif %} {% if page.next %}
+	{% endif %} {% if page.next %}-->
 	<!-- <a class="next" href="{{ page.next | relative_url }}">{{ page.next.title }} ></a>-->			
 {% endif %}
 </div>
