--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -21,7 +21,7 @@ layout: default
 	{{ content }}
 </div>
 <div class="tags-container">
-	keywords:{% for tag in page.tags %}
+	{% for tag in page.tags %}
 		 <a href="{{ site.url }}/tags/#{{tag | cgi_escape}}" class="post-tag">{{tag}}</a>{% unless forloop.last %}, {%endunless %}
 	{% endfor %}
 </div>
