--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -26,7 +26,7 @@ layout: default
 	{% endfor %}
 </div>
 <div class="navigation">
-	<a class="prev" href="{{ site.url }}">Back </a>
+	<a class="prev" href="{{ site.url }}">Home </a>
 	<!-- {% if page.previous %}
 		<a class="prev" href="{{ site.url }}"> <Home </a>
 	{% endif %} {% if page.next %}-->
