--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,7 +115,7 @@ body{
   padding: 5px 10px;
   margin-bottom: 5px;
   background:var(--post-list-bkg-color);
-  border:1px solid #000000<!--var(--border-color)-->;
+  border:1px solid #000000;
 
 }
 .navigation .prev{width: 45%; overflow: hidden; white-space: nowrap; text-overflow: ellipsis; color: var(--primary-font-color); font-weight: 400; padding: 5px 10px;}
