--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@
     --body-bg: #fff;
     --primary-font-color: #000;
     --border-color: #dadada;
-    --post-list-bkg-color: #81aad4;
+    --post-list-bkg-color: #c5e1fa;
 }
 
 [data-theme="dark"] {
