--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,11 @@
 @import url('https://fonts.googleapis.com/css?family=Catamaran:400,500,600,700&subset=latin-ext');
 :root {
     --bg-color: #fff;
-    --bg-hover-color: #ececec;
+    --bg-hover-color: #d7e8f7;
     --body-bg: #fff;
     --primary-font-color: #000;
     --border-color: #dadada;
-    --post-list-bkg-color: #d7e8f7;
+    --post-list-bkg-color: #e3effa;
 }
 
 [data-theme="dark"] {
@@ -63,7 +63,7 @@ body{
   padding: 5px 10px;
   margin-bottom: 5px;
   background:var(--post-list-bkg-color);
-  border: 1px solid #dadada;
+  border: 1px solid #000000;
 }
 
 .post-list:hover{
