--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,7 +63,7 @@ body{
   padding: 5px 10px;
   margin-bottom: 5px;
   background:var(--post-list-bkg-color);
-  border: 1px solid #000000;
+  border: 1px solid #fff1db;
 }
 
 .post-list:hover{
